--- a/css/main.scss
+++ b/css/main.scss
@@ -3,8 +3,58 @@
 ---
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css?family=Poppins:600&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Muli:400,600,700&display=swap');
+/* poppins-600 - latin */
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    src: local('Poppins SemiBold'), local('Poppins-SemiBold'),
+         url('../static/fonts/poppins-v9-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../static/fonts/poppins-v9-latin-600.woff') format('woff'), /* Modern Browsers */
+         url('../static/fonts/poppins-v9-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+}
+
+/* muli-regular - latin */
+@font-face {
+    font-family: 'Muli';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+         url('../fonts/muli-v17-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/muli-v17-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/muli-v17-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  }
+  /* muli-600 - latin */
+  @font-face {
+    font-family: 'Muli';
+    font-style: normal;
+    font-weight: 600;
+    src: local(''),
+         url('../fonts/muli-v17-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/muli-v17-latin-600.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/muli-v17-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+  }
+  /* muli-700 - latin */
+  @font-face {
+    font-family: 'Muli';
+    font-style: normal;
+    font-weight: 700;
+    src: local(''),
+         url('../fonts/muli-v17-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/muli-v17-latin-700.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/muli-v17-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+  }
+  /* muli-italic - latin */
+  @font-face {
+    font-family: 'Muli';
+    font-style: italic;
+    font-weight: 400;
+    src: local(''),
+         url('../fonts/muli-v17-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/muli-v17-latin-italic.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/muli-v17-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+  }
+
 
 // Our variables
 $header-font-family: "Poppins", sans-serif;
